--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 :root{
-    -yellow: hsl(47, 88%, 63%);
-    -white: hsl(0, 0%, 100%);
-    -gray500: hsl(0, 0%, 42%);
-    -gray950: hsl(0, 0%, 7%);
+    --yellow: hsl(47, 88%, 63%);
+    --white: hsl(0, 0%, 100%);
+    --gray500: hsl(0, 0%, 42%);
+    --gray950: hsl(0, 0%, 7%);
 
 }
 
@@ -11,4 +11,67 @@
     margin: 0;
     padding: 0;
 }
+
+@import url(https://fonts.google.com/specimen/Figtree);
+
+body{
+    font-family: 'Figtree', sans-serif;
+    background-color: var(--yellow)
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: auto;
+}
+
+.card{
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-radius: 15px;
+    width: 550px;
+    padding: 10px;
+    box-shadow: 10px 10px black;
+}
+
+.mini-title{
+    font-size: 20px;
+    font-weight: 800;
+    padding: 0 10px;
+    border-radius: 10px;
+    background-color: var(--yellow);
+}
+
+.mini-text{
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.main-title{
+    font-size: 25px;
+    font-weight: 800;
+    padding: 0 12px;
+}
+
+.text{
+    font-size: 15px;
+    font-weight: 500;
+    color: var(--gray500)
+}
+
+.card img{
+    height: 100%;
+    border-radius: 30px;
+}
+
+@media screen and (max-width: 375px) {
+    
+}
+
 
