--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,13 @@ body{
     background-color: var(--white);
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 20px;
     border-radius: 15px;
-    width: 550px;
+    width: 385px;
     padding: 10px;
     box-shadow: 10px 10px black;
+    border: 2px solid black;
 }
 
 .mini-title{
@@ -56,7 +56,6 @@ body{
 .main-title{
     font-size: 25px;
     font-weight: 800;
-    padding: 0 12px;
 }
 
 .text{
@@ -68,6 +67,24 @@ body{
 .card img{
     height: 100%;
     border-radius: 30px;
+}
+
+.author{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.author img{
+    width:30px;
+    height:30px;
+}
+
+.author .author-name{
+    font-size: 20px;
+    font-weight: bold;
+    text-wrap: wrap;
+    line-height: 100%;
 }
 
 @media screen and (max-width: 375px) {
